package io.sanchopansa.arkham.cards;

public enum CardType {
    ALLY,
    BLIGHT,
    COMMON_ITEM,
    CORRUPTION,
    EXHIBIT_ITEM,
    INJURY,
    MADNESS,
    SKILL,
    SPECIAL,
    SPELL,
    UNIQUE_ITEM
}
